fixed screen size issues

--- a/employment.html
+++ b/employment.html
@@ -7,7 +7,7 @@
    <body>
      <div class="gridbody">
       <div class="heading">
-        <h1>About me/ Employment History </h1>
+        <h1>About / Employment </h1>
       </div> <!--heading-->
         <div class="navigation">
           <nav class="nav">
@@ -20,7 +20,7 @@
         <div class="emplymentbody">
           <div class="E7">
             <div class="aboutme">
-              <h2>Terry Baillie</h2>
+              <h2>Hi my name is Terry Baillie</h2>
               <h3 class="about">I'm originally from Australia but after meeting and marrying a great American Lady, I migrated to the USA in 2004, never looked back and have worked in many fields over that time.</h3>
               <h3 class="about">I enjoy seeing new and different parts of this country together with my wife and children, building models for relaxation and working on our classic 86 Porsche 928.</h3>
             </div> <!--aboutme-->
