slide show for cert

--- a/certificates.html
+++ b/certificates.html
@@ -17,7 +17,6 @@
         
         <a id="top"></a>
       <div class="mainbody">
-          <div class="C1">
             <div class="ph2">
               <h2>Codecademy Certificates</h2>
             </div> <!--ph2-->
@@ -25,14 +24,36 @@
               <p>Below are all the certifications I have currently recieved since enrolling in the pro courses at Codecademy.</p>
               <p>Currently I am working on the Front End Engineer Career Path.</p>
             </div> <!--paragraphs for portfolio-->
-            <img src="./resources/images/LCLine.png" alt="Command Line" style="width:100%">
-            <img src="./resources/images/LCSS.png" alt="CSS Beginer" style="width:100%">
-            <img src="./resources/images/LCSSInter.png" alt="CSS Intermediate" style="width:100%">
-            <img src="./resources/images/LHTML.png" alt="HTML" style="width:100%">
-            <img src="./resources/images/LP3.png" alt="Python3" style="width:100%">
-            <img src="./resources/images/Web.jpg" alt="Build a webpage" style="width:100%">
-            <img src="./resources/images/LJS.png" alt="Java Script" style="width:100%">
-          </div> <!--C1-->
+            <div class="slideshow-container"> <!-- Slideshow container start-->
+              <div class="mySlides2 fade">
+                <div class="text">Learn The Command Line</div>
+                <img src="./resources/images/LCLine.png" style="width:100%">
+              </div>
+              <div class="mySlides2 fade">
+                <div class="text">Learn CSS- Beginner</div>
+                <img src="./resources/images/LCSS.png" style="width:100%">
+              </div>
+              <div class="mySlides2 fade">
+                <div class="text">Learn CSS - Intermediate</div> 
+                <img src="./resources/images/LCSSInter.png" style="width:100%">
+              </div>
+              <div class="mySlides2 fade">
+                <div class="text">Learn HTML</div>
+                <img src="./resources/images/LHTML.png" style="width:100%">
+              </div>
+              <div class="mySlides2 fade">
+                <div class="text">Learn Python3</div>
+                <img src="./resources/images/LP3.png" style="width:100%">
+              </div>
+              <div class="mySlides2 fade">
+                <div class="text">Learn Build a Webpage with HTML, CSS and GitHub Pages</div>
+                <img src="./resources/images/Web.jpg" style="width:100%">
+              </div>
+              <div class="mySlides2 fade">
+                <div class="text">Learn Java Script - Beginner</div>
+                <img src="./resources/images/LJS.png" style="width:100%">
+              </div>
+            </div> <!--slideshow container end-->
           <br />
           <div class="C2">
             <div class="ph2">
@@ -59,5 +80,6 @@
         <a class="foot name">&copy; Terry Baillie 2022</a>  
       </footer> <!--footer--> 
     </div> <!--GRIDBODY-->
+    <script src="./index1.js"></script>
   </body>
  </html>
