--- a/portfolio.html
+++ b/portfolio.html
@@ -32,116 +32,116 @@
           
           <div class="slideshow-container"> <!-- Slideshow container start-->
           <div class="mySlides1 fade">
+            <div class="text">X-Wing Assault</div>
             <img src="./resources/images/SM.png" style="width:100%">
-              <div class="text">Solo Mission</div>
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SM0.png" style="width:100%">
-                <div class="text">Solo Mission code</div>
+            <div class="text">X-Wing Assault code</div>
+            <img src="./resources/images/SM0.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SM1.png" style="width:100%">
-                <div class="text">Solo Mission start screen</div>
+            <div class="text">X-Wing Assault start screen</div> 
+            <img src="./resources/images/SM1.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SM2.png" style="width:100%">
-                <div class="text">Solo Mission play screen</div>
+            <div class="text">X-Wing Assault play screen</div>
+            <img src="./resources/images/SM2.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SM3.png" style="width:100%">
-                <div class="text">Solo Mission end screen</div>
+            <div class="text">X-Wing Assault end screen</div>
+            <img src="./resources/images/SM3.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
+            <div class="text">Key Hunter</div>
             <img src="./resources/images/KH.png" style="width:100%">
-              <div class="text">Key Hunter</div>
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/Key1.png" style="width:100%">
-                <div class="text">Key Hunter code part 1</div>
+            <div class="text">Key Hunter code part 1</div>
+            <img src="./resources/images/Key1.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/Key2.png" style="width:100%">
-                <div class="text">Key Hunter Code part 2</div>
+            <div class="text">Key Hunter Code part 2</div>
+            <img src="./resources/images/Key2.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/Key3.png" style="width:100%">
-                <div class="text">Key Hunter game play</div>
+            <div class="text">Key Hunter game play</div>
+            <img src="./resources/images/Key3.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
+            <div class="text">Porsche 928 Workshop Manual</div>
             <img src="./resources/images/928.png" style="width:100%">
-              <div class="text">Porsche 928 Workshop Manual</div>
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/WSM0.png" style="width:100%">
-                <div class="text">Workshop Manual Code</div>
+            <div class="text">Workshop Manual Code</div>
+            <img src="./resources/images/WSM0.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/WSM1.png" style="width:100%">
-                <div class="text">Workshop Manual Landing Page</div>
+            <div class="text">Workshop Manual Landing Page</div>
+            <img src="./resources/images/WSM1.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/WSM3.png" style="width:100%">
-                <div class="text">Workshop Manual Content View</div>
+            <div class="text">Workshop Manual Content View</div>
+            <img src="./resources/images/WSM3.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
+            <div class="text">Stupid Ways</div>
             <img src="./resources/images/SW.png" style="width:100%">
-              <div class="text">Stupid Ways</div>
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SW1.png" style="width:100%">
-                <div class="text">Stupid Ways code part 1</div>
+            <div class="text">Stupid Ways code part 1</div>
+            <img src="./resources/images/SW1.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SW2.png" style="width:100%">
-                <div class="text">Stupid Ways code part 2</div>
+            <div class="text">Stupid Ways code part 2</div>
+            <img src="./resources/images/SW2.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SW3.png" style="width:100%">
-                <div class="text">Stupid Ways landing game play</div>
+            <div class="text">Stupid Ways landing game play</div>
+            <img src="./resources/images/SW3.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/SW4.png" style="width:100%">
-                <div class="text">Stupid Ways game play part 2</div>
+            <div class="text">Stupid Ways game play part 2</div>
+            <img src="./resources/images/SW4.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
+            <div class="text">Evesunflower.com</div>
             <img src="./resources/images/ESF.png" style="width:100%">
-              <div class="text">Evesunflower.com</div>
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/ESF1.png" style="width:100%">
-                <div class="text">Evesunflower.com code</div>
+            <div class="text">Evesunflower.com code</div>
+            <img src="./resources/images/ESF1.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/ESF2.png" style="width:100%">
-                <div class="text">Evesunflower.com Events page</div>
+            <div class="text">Evesunflower.com Events page</div>
+            <img src="./resources/images/ESF2.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/ESF3.png" style="width:100%">
-                <div class="text">Evesunflower.com About page</div>
+            <div class="text">Evesunflower.com About page</div>
+            <img src="./resources/images/ESF3.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/ESF4.png" style="width:100%">
-                <div class="text">Evesunflower.com Landing page</div>
+            <div class="text">Evesunflower.com Landing page</div>
+            <img src="./resources/images/ESF4.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
+            <div class="text">Erica & District Historical Society</div>
             <img src="./resources/images/ED.png" style="width:100%">
-              <div class="text">Erica & District Historical Society</div>
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/EDHS1.png" style="width:100%">
-                <div class="text">Erica & District Historical Society Landing page</div>
+            <div class="text">Erica & District Historical Society Landing page</div>
+            <img src="./resources/images/EDHS1.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/EDHS2.png" style="width:100%">
-                <div class="text">Erica & District Historical Society About page</div>
+            <div class="text">Erica & District Historical Society About page</div>
+            <img src="./resources/images/EDHS2.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/EDHS3.png" style="width:100%">
-                <div class="text">Erica & District Historical Society Code</div>
+            <div class="text">Erica & District Historical Society Code</div>
+            <img src="./resources/images/EDHS3.png" style="width:100%">
           </div>
           <div class="mySlides1 fade">
-              <img src="./resources/images/EDHS4.png" style="width:100%">
-                <div class="text">Erica & District Historical Society Newsletter page</div>
+            <div class="text">Erica & District Historical Society Newsletter page</div>
+            <img src="./resources/images/EDHS4.png" style="width:100%">
           </div>
         </div> <!-- slideshow-container end-->
       <footer>
