fixed JS functions

--- a/certificates.html
+++ b/certificates.html
@@ -80,6 +80,7 @@
         <a class="foot name">&copy; Terry Baillie 2022</a>  
       </footer> <!--footer--> 
     </div> <!--GRIDBODY-->
-    <script src="./index1.js"></script>
+    <script src="./index.js"> </script>
+    <script>certSlides();</script>
   </body>
  </html>
