--- a/portfolio.html
+++ b/portfolio.html
@@ -150,6 +150,6 @@
 
       </div> <!--gridbody-->
       <script src="./index.js"></script>
-  
+      <script>portSlides();</script>
    </body>
   </html>    
