created another slideshow for certs

--- a/certificates.html
+++ b/certificates.html
@@ -62,8 +62,16 @@
              <div class="c port">
               <p>These are my Certifications that I held as a Quality Control Supervisor and Weld Inspector. Because I no longer work for the company they have not be renewed, However my quantity of hours in method stand at over 13K in Visual Inspection and over 9K in Penetrant Inspection both at Level 2.</p>
             </div> <!--paragraphs for portfolio-->
-            <img src="./resources/images/PTLVL2.jpeg" alt="PT Level 2" style="width:100%">
-            <img src="./resources/images/VTLVL2.jpeg" alt="VT Level 2" style="width:100%">
+            <div class="slideshow-container"> <!-- Slideshow container start-->
+              <div class="mySlides3 fade">
+                <div class="text">Penetrant Testing Level II</div>
+                <img src="./resources/images/PTLVL2.jpeg" style="width:100%">
+              </div>
+              <div class="mySlides3 fade">
+                <div class="text">Visual Testing Level II</div>
+                <img src="./resources/images/VTLVL2.jpeg" style="width:100%">
+              </div>
+            </div><!--Slideshow container end-->
           </div> <!--C2-->
           <br />
           <div class="C3">
@@ -82,5 +90,6 @@
     </div> <!--GRIDBODY-->
     <script src="./index.js"> </script>
     <script>certSlides();</script>
+    <script>certSlides2();</script>
   </body>
  </html>
