fixed cert added slideshow stop

--- a/certificates.html
+++ b/certificates.html
@@ -13,9 +13,9 @@
 
         <div class="left-frame-top"> <!--Start of the left-frame-top or Rectangles on the left-->
             <div class="panel-1">
-                <a>
+                <a href="./certificates.html">
                     <span class="hop"></span>
-                    Created By
+                    Click to stop Slideshow
                     <span class="hop"></span>
                 </a>
             </div>
