--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
     <head>
      <title>Terry Baillie</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
+     <script src="./index.js"></script>
+           
     </head>
     <body>
       <div class="wrap"> <!--Start of the wrap section or Top section-->
 
         <div class="left-frame-top"> <!--Start of the left-frame-top or Rectangles on the left-->
-            <div class="panel-1">
-                <a></a>
+            <div class="panel-1">  
+              <div class="clock">HH : MM : SS</div>
+              <div class="date">DD - MM -YYYY</div>
+              <script>theClock()</script>
             </div><!--panel-1 end-->
             <div class="panel-2">
                 <span class="hop">Terry Baillie 2022</span>
