fixed font sizing, and slideshow timing

--- a/certificates.html
+++ b/certificates.html
@@ -68,38 +68,38 @@
         <div class="left-frame"> <!--Start of the left-frame or Rectangles on the left-->
             <div>
                 <div class="panel-3">
-                    01
-                    <span class="hop">-NX-01</span>
+                    Certificates
+                    <span class="hop">-From Codecademy</span>
                 </div>
                 <div class="panel-4">
-                    02
-                    <span class="hop">-NCC-1701</span>
+                    Learn
+                    <span class="hop">-CSS Beginner</span>
                 </div>
                 <div class="panel-5">
-                    03
-                    <span class="hop">-NCC-1701-A</span>
+                    Learn
+                    <span class="hop">-CSS Intermediate</span>
                 </div>
                 <div class="panel-6">
-                    04
-                    <span class="hop">-NCC-1701-B</span>
+                    Learn
+                    <span class="hop">-HTML</span>
                 </div>
                 <div class="panel-7">
-                    05
-                    <span class="hop">-NCC-1701-C</span>
+                    Learn
+                    <span class="hop">-Python3</span>
                 </div>
                 <div class="panel-8">
-                    06
-                    <span class="hop">-NCC-1701-D</span>
+                    Learn
+                    <span class="hop">-Command Line</span>
                 </div>
                 <div class="panel-9">
-                    07
-                    <span class="hop">-NCC-1701-E</span>
+                    Learn
+                    <span class="hop">-JS Beginner</span>
                 </div>
             </div>
             <div>
                 <div class="panel-10">
-                    08
-                    <span class="hop">-NCC-74656</span>
+                   Learn
+                    <span class="hop">-How to build a Web Page with HTML, CSS and Github Pages</span>
                 </div>
             </div>
         </div> <!--End of the left-frame-->
