--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="right-frame-top"> <!--Start of the right-frame-top-->
           <div class="banner">
-           Choose one of the links below
+           Welcome
           </div>
           <div class="data-cascade-button-group"> <!--Start of the data-cascade-button-group -->
             <div class="button-col">
