played with employment side

--- a/employment.html
+++ b/employment.html
@@ -3,6 +3,7 @@
    <head>
     <title>Terry Baillie</title>
      <link href="./resources/css/portfolio.css" type='text/css' rel="stylesheet">
+     <script src="./index.js"></script>
    </head>
    <body>
      <div class="gridbody">
@@ -15,7 +16,7 @@
           </nav>  <!--nav end-->
         </div> <!--navigation-->
       
-      <a id="top"></a>
+      
       <div class="mainbody">
         <div class="emplymentbody">
           <div class="E7">
@@ -35,6 +36,9 @@
               </ul>
             </div>
           </div> <!--E7-->
+          <br>
+          <br>
+        </div>
           <div class="E1">
             <div class="ph4">
               <h2>United States Postal Service</h2>
@@ -162,5 +166,6 @@
         <a class="foot name">&copy; Terry Baillie 2022</a>  
       </footer> <!--footer--> 
    </div> <!--GRIDBODY-->
+   <script src="./index.js"></script>
    </body>
  </html>
