--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h1>Hi, I'm Terry Baillie</h1>
               <div class="flexbox">
                 <div class="col">
-                  <p>I am learning to become a Front End Engineer for Web Development and the following Webpages are a creation of a combination of things in life that inspire me and of those things I have already done.</p>
+                  <p>I am studying to become a Front End Engineer for Web Development and the following Webpages are a creation of a combination of things in life that inspire me and of the work and experiences I have already done.</p>
                   <p>Please feel free to look around.</p>
                   <img class="border" src="./resources/images/me.jpeg" style="width:40%">
                </div>
