fixed issues with buttons and contact page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                       </div>
                       <div class="landing-button-panel">
-                        <span class="hop">Empl</span>   
+                        <span class="hop">Empl__</span>   
                       </div>
                     </div><!--End landing-button-box-->
                     <div class="landing-button-box"><!--Start landing-button-box-->
@@ -38,7 +38,7 @@
                         </div>
                       </div>
                       <div class="landing-button-panel">
-                        <span class="hop">Cert</span>   
+                        <span class="hop">Cert__</span>   
                       </div>
                     </div><!--End landing-button-box-->
                     <div class="landing-button-box"><!--Start landing-button-box-->
@@ -48,7 +48,7 @@
                         </div>
                       </div>
                       <div class="landing-button-panel">
-                        <span class="hop">Port</span>   
+                        <span class="hop">Port__</span>   
                       </div>
                     </div><!--End landing-button-box-->
                     <div class="landing-button-box"><!--Start landing-button-box-->
@@ -58,13 +58,13 @@
                         </div>
                       </div>
                       <div class="landing-button-panel">
-                        <span class="hop">Cont</span>   
+                        <span class="hop">Cont__</span>   
                       </div>
                     </div><!--End landing-button-box-->
                   </nav><!--End landing-nav-box-->
                 </div><!--End landing-content-text-->
                 <div class="landing-content-img"><!--Start landing-content-img-->
-                  <img src="./resources/images/Funme.jpg">
+                  <img src="./resources/images/me2.png">
                 </div><!--End landing-content-img-->
               </div><!--End landing-content-inside-->
               <div class="landing-content-panel">
@@ -243,8 +243,8 @@
 
                 <div class="cert-banner-box"><!--Start cert-banner-box-->
                   <div class="cert-banner-inside"><!--Start cert-banner-inside-->
-                    <button class="employment-back"><a href="#top">Back</a></button>
-                    <h1>Certifications</h1>
+                    <button class="cert-back"><a href="#top">Back</a></button>
+                    <div class="cert-heading"><h3>Certifications</h3></div>
                   </div><!--End cert-banner-inside-->
                 </div><!--End cert-banner-box-->
 
@@ -335,8 +335,8 @@
 
                 <div class="port-banner-box"><!--Start port-banner-box-->
                   <div class="port-banner-inside"><!--Start port-banner-inside-->
-                    <button class="employment-back"><a href="#top">Back</a></button>
-                    <h1>PortFolio of Coding</h1>
+                    <button class="port-back"><a href="#top">Back</a></button>
+                    <div class="port-heading"><h3>Portfolio of coding</h3></div>
                   </div><!--End port-banner-inside-->
                 </div><!--End port-banner-box-->
 
@@ -493,12 +493,12 @@
         <a id="contact"></a>
         <div class="contact-box"><!--Start contact-box-->
           <div class="contact-box-in"><!--Start contact-box-in-->
-            <button class="employment-back"><a href="#top">Back</a></button>
-            <h1>Terry Baillie</h1>
+            <h1>Contact me</h1>
             <div class="contact-buttons"><!--Start contact-buttons-->
-              <button class="EM" >Email Me</button>
-              <button class="FB" >Find me on Facebook<img src="resources/images/fb.png"> </button>
-              <button class="IN" >Find me on Instagram<img src="./resources/images/Insta.png"> </button>
+              <button class="EM" ><a href="mailto:maddarr@bellsouth.net">Email Me</a></button>
+              <button class="FB" ><a href="https://www.facebook.com/Maddarr/">Find me on Facebook</a><img src="resources/images/fb.png"> </button>
+              <button class="IN" ><a href="https://www.instagram.com/a_fat_aussie_abroad/">See me on Instagram</a><img src="./resources/images/Insta.png"> </button>
+              <button class="contact-back"><a href="#top">Back</a></button>
             </div><!--End contact-buttons-->
             <div class="contact-about"><!--Start contact-about-->
               <div class="contact-about-in"><!--Start contact-about-in-->
@@ -509,7 +509,7 @@
                   <p>I'm originally from Australia but after meeting and marrying a great American Lady, I migrated to the USA in 2004. Since then I've never looked back and have worked in many fields over the time here.</p>
                   <p>I enjoy seeing new and different parts of this country together with my wife and children, building models for relaxation and working on our classic 86 Porsche 928.</p>
                   <p>Back in 2018 I began looking into programming in the Swift language, I did a few tutorials on line and finally found a guy that had a great library of both books and tutorials on the subject <a href="http://www.hackingwithswift.com"><em>Hacking With Swift</em></a>.
-                    I originally began by following one of his books, <em>Hacking with iOS</em>, and had a blast learning from it. However because of not wanting to publish any work to the apple app store and not being able to share the things I did
+                    I originally began by following one of his books, Hacking with iOS, and had a blast learning from it. However because of not wanting to publish any work to the apple app store and not being able to share the things I did
                     with family or friends, I soon gave up... For a while. 
                     Roughly a year later I picked it back up again and began buying, reading, watching and learning how to program in Swift and Xcode once again, this time focusing on the macOS.
                     and after a while I began to write my own games and code. Still not publising on the apple store, but able to run them from my own computer and show them off from there.</p>
